--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,10 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - JRWSP
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - JRWSP/pi_wotd_eink
+  - JRWSP/SimpleEarnAPY
+  - JRWSP/SileroVAD_for_Whisper-cpp
+  - JRWSP/CashAndCarryTerminal
