Dark mode use qwanta theme

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -9,7 +9,7 @@
 # blogger_url: # your blogger URL
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: jrwsp@mail.aommy.xyz # your email address
+email: jirawat.sai@proton.me # your email address
 x_username: JRWSPth # your X handle
 bluesky_url: https://bsky.app/profile/jrwspth.bsky.social # your bluesky URL
 github_username: JRWSP # your GitHub user name
