--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Jirawat
 middle_name:
 last_name: S., Ph.D.
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Feel free to reach me out!.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -16,7 +16,7 @@ footer_text: >
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 👨🏼‍🔬 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://jrwsp.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
