--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,87 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Jirawat Saiphet
     - name: Date of Birth
-      value: 14th March 1879
+      value: 12th March 1997
     - name: Languages
-      value: English, German
+      value: English, Thai
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ph.D.
+      institution: Eberhard Karls Universität Tübingen, Tübingen, Germany
+      year: 2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Developed tensor network simulations of strongly interacting nitrogen-vacancy (NV) centers in diamond.
+        - Explored the limitations in simulating the dynamics of NV clusters under interaction, disorder, and dissipation.
+        - Investigated quantum fisher information and entanglement generation, and achieved highly sensitive probe states composed of collective spins using optimal control methods.
+    - title: M.Sc.
+      institution: Mahidol University, Bangkok, Thailand
+      year: 2021
       description:
-        - Description 1.
-        - Description 2.
+        - Conducted research on Quantum Approximate Optimization Algorithm (QAOA) using IBM’s Qiskit.
+        - Evaluated the QAOA’s potential in solving clustering problems.
+        - Benchmarked performance against the classical K-means clustering algorithm
+    - title: B.Sc.
+      institution: Mahidol University, Bangkok, Thailand
+      year: 2019
+      description:
+        - Conducted research on decoherence suppression in a single qubit by quantum delayed feedback based on the no-knowledge measurement.
+        - Analytically derived compatible results between the Itô and Stratonovich stochastic master equations.
+        - rovided analytical solutions for delayed feedback where the measurement operator commutes with a unitary operator, supplemented by numerical results for the general case.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Postdoc Researcher
+      institution: DiFC-UNIPA, University of Palermo
+      year: Q4/2025-Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - How can quantum computing help in Protein molecular Dynamics? 
+        - Investigate quantum computing techniques to handle effective sampling of the protein conformational space.
+
+    - title: Quantum Algorithm Researcher
+      institution: Quantum Technology Foundation (Thailand)
+      year: 02/2021-05/2021
       description:
-        - Description 1.
-        - Description 2.
+        - Temporary position for the one-time project.
+        - Explored challenges in financial sector and identified potential applications of quantum algorithms.
+        - Developed a proof-of-concept to demonstrate the quantum-classical hybrid algorithm.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Fellowships, Grants and Scholarships
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
+    - year: 2021
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - PhD funded by Baden-Württemberg Foundation for project CDINQUAs
+    - year: 2020
       items:
-        - Max Planck Medal
+        - Research Fellowship for Thailand Frontier Research Fund, grant number B05F630108
+    - year: 2019
+      items:
+        - Scholarship for Young Scientists, Mahidol University
+    - year: 2015
+      items:
+        - Sritrang Tong Scholarship, Mahidol University
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Physics
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Quantum Information
+        - Quantum Simulation
+        - Many-body Physics
+    - title: Non-physics.
       items:
-        - Description 1.
-        - Description 2.
+        - Machine Learning
+        - Quantitative Finance
+        - High Performance Computing
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Diving, self-hosting, watches, drinking.
+    - <u>Sports:</u> Basketball, football.
